--- a/style/style.css
+++ b/style/style.css
@@ -74,7 +74,7 @@
     }
 
     * {
-        font-family: "Roboto";
+        font-family: 'Roboto', sans-serif;
         box-sizing: border-box;
     }
 
@@ -86,7 +86,7 @@
         background: #333333;
         color: #FFF;
         height: 56px;
-        padding: 1em;
+        padding: 10px;
     }
 
     .menu {
@@ -177,6 +177,14 @@
         font-size: 33px;
     }
 
+
+
+    .menu .dropdown a {
+        color: #fff;
+        text-decoration: none;
+    }
+
+
     #menu-toggle:checked+.menu-button-container .menu-button::before {
         margin-top: 0px;
         transform: rotate(405deg);
@@ -191,7 +199,7 @@
         transform: rotate(-405deg);
     }
 
-    @media (min-width: 820px) {
+    @media (min-width: 768px) {
         .full-screen {
             max-width: 1440px;
             margin: 0 auto;
@@ -234,7 +242,7 @@
             background: #000000;
             border-radius: 5px;
         }
-        
+
         .dropdown {
             display: flex;
             align-items: center;
@@ -262,7 +270,7 @@
             left: 0;
             right: 0;
             top: 65px;
-            max-width: 1000px;
+            max-width: 1022px;
             margin: 0 auto;
             height: 0;
             padding: 0;
@@ -302,33 +310,33 @@
             transform: scale(0, 0);
             visibility: hidden;
         }
-        
+
         .dropdown .left-container {
             display: flex;
-	    flex-direction: column;
-	    position: relative;
+            flex-direction: column;
+            position: relative;
             background-image: linear-gradient(to bottom, #fff, #fff, #fcf4db);
             transition: height 0.3s ease-in-out;
             transition-delay: 0.1s;
         }
-        
-        .dropdown .left-container>img { 
+
+        .dropdown .left-container>img {
             position: absolute;
-	    bottom: 24px;
-	    right: 0;
-	    left: 0;
-	    margin: 0 auto;
+            bottom: 24px;
+            right: 0;
+            left: 0;
+            margin: 0 auto;
         }
-        
+
         .dropdown .left-container .movies {
             background: #F2C94C;
             border-radius: 5px 5px 0 0;
         }
-        
+
         .dropdown .left-container .movies>a {
             color: #000;
         }
-        
+
         .dropdown .left-container>li {
             background: #F2F2F2;
             height: 48px;
@@ -338,7 +346,7 @@
             justify-content: flex-start;
             position: relative;
         }
-        
+
         .dropdown .left-container>li>a {
             color: #828282;
             font-size: 12px;
@@ -347,11 +355,11 @@
             align-items: center;
             padding-left: 16px;
         }
-        
+
         .dropdown .left-container>li>a::before {
             padding-right: 28px;
         }
-        
+
         .dropdown .left-container>li>a::after {
             content: "\e901";
             font-family: "icomoon";
@@ -359,136 +367,162 @@
             position: absolute;
             right: 16px;
         }
-        
+
         .dropdown .left-container .movies a::before {
             content: "\e904";
             font-family: "icomoon";
         }
-        
+
         .dropdown .left-container .music a::before {
             content: "\e902";
             font-family: "icomoon";
-         }
-         
-         .dropdown .left-container .books a::before {
+        }
+
+        .dropdown .left-container .books a::before {
             content: "\e903";
             font-family: "icomoon";
-         }
-         
-         .dropdown .right-container .left-image {
-             vertical-align: text-top;
-             width: 244px;
-             height: 375px;
-             margin: 25px 12px 0 12px;
-         }
-         
-         .dropdown .right-container .right-image {
-             width: 166px;
-             height: 233px;
-             position: absolute;
-	     right: 0;
-	     bottom: 26px;
-	     z-index: 2;
-         }
-         
-         .dropdown .right-container {
-             display: flex;
-             width: 100%;
-         }
-         
-         
-         .dropdown .lists {
-             display: flex;
-             flex-wrap: wrap;
-         }
-         
-         .dropdown .background-image {
-             position: relative;
-         }
-         
-         .dropdown .background-image:after {
-              background: url('../images/background-menu.png');
-              content: '';
-              width: 441px;
-	      height: 440px;
-	      opacity: 0.4;
-	      background-size: cover;
-	      position: absolute;
-	      top: 0;
-	      right: 0;
-         }
-         
-         .dropdown .background-image .watch-movie {
-             position: absolute;
-	     right: 12px;
-	     bottom: 36px;
-	     background: #F2C94C;
-	     border-radius: 5px;
-	     border: unset;
-             padding: 4px;
-             display: flex;
-             align-items: center;
-             z-index: 3;
-             cursor: pointer;
-             box-shadow: 1px 1px 1px rgb(171 177 183)
-         }
-         
-         .dropdown .background-image .watch-movie::after {
+        }
+
+        .dropdown .right-container .left-image {
+            vertical-align: text-top;
+            width: 244px;
+            height: 375px;
+            margin: 25px 12px 0 12px;
+        }
+
+        .dropdown .right-container .right-image {
+            width: 138px;
+            height: 233px;
+            position: absolute;
+            right: 0;
+            bottom: 26px;
+            z-index: 2;
+        }
+
+        .dropdown .right-container {
+            display: flex;
+            width: 100%;
+        }
+
+        .submenu .container {
+            height: fit-content;
+            width: 276px;
+        }
+
+        .submenu .container .links {
+            display: flex;
+            align-items: center;
+            background: #4F4F4F;
+            height: 44px;
+            padding: 15px 19px 15px 17px;
+        }
+
+        .submenu .container .links:hover {
+            background: #000;
+        }
+
+        .submenu .container .links:first-child {
+            border-radius: 5px 5px 0 0;
+        }
+
+        .submenu .container .links:last-child {
+            border-radius: 0 0 5px 5px;
+        }
+
+        .dropdown .lists {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .dropdown .background-image {
+            position: relative;
+        }
+
+        .dropdown .background-image:after {
+            background: url('../images/background-menu.png');
+            content: '';
+            width: 441px;
+            height: 440px;
+            opacity: 0.4;
+            background-size: cover;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .dropdown .background-image .watch-movie {
+            position: absolute;
+            right: 12px;
+            bottom: 36px;
+            background: #F2C94C;
+            border-radius: 5px;
+            border: unset;
+            padding: 4px;
+            display: flex;
+            align-items: center;
+            z-index: 3;
+            cursor: pointer;
+            box-shadow: 1px 1px 1px rgb(171 177 183)
+        }
+
+        .dropdown .background-image .watch-movie::after {
             content: "\e901";
             font-family: "icomoon";
             font-size: 4px;
-	    background: #fff;
-	    border-radius: 50%;
-	    padding: 3px;
-	    margin-left: 6px;
-         }
-         
-         .dropdown .right-container .lists div {
-            display:flex;
+            background: #fff;
+            border-radius: 50%;
+            padding: 3px;
+            margin-left: 6px;
+        }
+
+        .dropdown .right-container .lists div {
+            display: flex;
             align-items: flex-start;
             flex-direction: column;
-         } 
-         
-         .dropdown .right-container .lists div:first-child {
+        }
+
+        .dropdown .right-container .lists div:first-child {
             margin-right: 10px;
-         }
-         
-         .dropdown .right-container .lists div:nth-child(2) {
+        }
+
+        .dropdown .right-container .lists div:nth-child(2) {
             order: 2;
-         }
-         
-         .dropdown .right-container .lists div:nth-child(3) {
-         order: 1;
-         }
-         
-         .dropdown .right-container .lists h2 {
+        }
+
+        .dropdown .right-container .lists div:nth-child(3) {
+            order: 1;
+        }
+
+        .dropdown .right-container .lists h2 {
             font-size: 16px;
             color: #000;
             font-weight: 600;
             border-bottom: 1px solid #E0E0E0;
             margin: 0;
-         }
-         
-         .dropdown .right-container .lists ul {
-             padding: 0;
-             white-space: nowrap;
-             cursor: pointer;
-             z-index: 2;
-         }
-         
-         .dropdown .right-container .lists li {
+            line-height: 19px;
+        }
+
+        .dropdown .right-container .lists ul {
+            padding: 0;
+            white-space: nowrap;
+            cursor: pointer;
+            z-index: 2;
+        }
+
+        .dropdown .right-container .lists li {
             font-size: 12px;
             color: #000;
             font-weight: 300;
             line-height: 14px;
-         }
-         
-         .dropdown .right-container .lists li:hover {
+        }
+
+        .dropdown .right-container .lists li:hover {
             color: #F2C94C;
-         }
+        }
 
         .menu>li {
             padding: 17px 12px;
+            white-space: nowrap;
         }
 
         .menu>li:after {
@@ -500,7 +534,7 @@
         }
     }
 
-    @media (max-width: 820px) {
+    @media (max-width: 768px) {
         .menu-button-container {
             display: flex;
         }
@@ -544,34 +578,43 @@
         .menu>li:not(:last-child) {
             border-bottom: 1px solid #444;
         }
-        
+
         .dropdown .submenu {
             display: none;
         }
     }
 
     @media (min-width: 1024px) {
+
+        .top-nav {
+            padding: 1rem 1.5rem 1rem 1rem;
+        }
+
         .menu>li {
             padding: 17px 12px;
-            margin: 0 10px;
+            margin: 0 5px;
         }
-        
+
         .dropdown .right-container .left-image {
             margin: 25px 32px 0 32px;
         }
-        
+
         .dropdown .right-container .lists div:first-child {
             margin-right: 32px;
         }
-        
+
         .dropdown .background-image {
-           width: 100%;
+            width: 100%;
         }
-        
+
         .dropdown .lists {
             display: grid;
-    	    grid-template-columns: repeat(2, 0fr);
+            grid-template-columns: repeat(2, 0fr);
         }
-             
+
+        .dropdown .right-container .right-image {
+            width: 166px;
+        }
+
     }
 </style>
